# Connectias

./: .clang-tidy  .gitignore  .gitmodules  .markdown-link-check.json  16KB_IMPLEMENTATION_REPORT.md  ANDROID_DEV_ANALYSIS.md  API_REFERENCE.md  APP_FEATURES_MAPPING.md  BUG_ANALYSIS_REPORT.md  CHANGELOG.md  CHANGELOG_RELEASE.md  CLAUDE.md  CODE_REVIEW_REPORT.md  Cargo.toml  Connectias.code-workspace  DEPENDENCY_UPDATES_16KB.md  FEATURE_IDEAS.md  FEATURE_IDEAS_STATUS.md  IMPLEMENTATION_PLAN.md  LICENSE  NIA_FEATURES.md  NOTICE  OPTIMIZATION_SUMMARY.md  PLUGIN_IMPORT_TEST.md  PLUGIN_STREAMING_IMPROVEMENTS.md  README.md  RELEASE_NOTES.md  SCAN_REPORT.md  SECURITY.md  SECURITY_ZERO_TRUST_VERIFIER.md  THREE_PROCESS_UI_PLAN.md  TODO_NEXT.md  VULNERABILITY_SCANNER_ROADMAP.md  app-dependencies.txt  build-rust-libs.sh  build.gradle.kts  build_rust.sh  build_rust_android.sh  create-keystore.sh  dependency-tree.txt  (+9 more)
.agents/: bug-agent-prompt.md
.cargo/: config.toml
.codeql/: codeql-config.yml
.cursor/: icon-usage-rules.md
android/: gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
benchmark/: build.gradle.kts
build-logic/: build.gradle.kts  settings.gradle.kts
common/: build.gradle.kts  consumer-rules.pro
core/: RUST_ROOT_DETECTOR_README.md  build-rust.sh  build.gradle.kts  consumer-rules.pro
core-api/: build.gradle.kts
core-network/: build.gradle.kts
core-plugin-manager/: build.gradle.kts
core-security/: build.gradle.kts
core-storage/: build.gradle.kts
core/src/main/rust/: Cargo.toml  build.rs
core/src/main/rust/.cargo/: config.toml
core/src/main/rust/src/: lib.rs
crates/connectias-core/: Cargo.toml  deps_analysis.txt  python_usage.txt  tauri_commands.txt  tauri_usage.txt
crates/connectias-core/examples/: diagnostics_demo.rs  project_scanner.rs
crates/connectias-core/src/: diagnostics.rs  lib.rs  memory.rs  message_broker.rs  metrics.rs  performance.rs  performance_helpers.rs  plugin_manager.rs  recovery.rs
crates/connectias-core/src/platform/: mod.rs
crates/connectias-core/src/platform/linux/: mod.rs  process_manager.rs
crates/connectias-core/src/platform/windows/: process_manager.rs
crates/connectias-core/src/services/: alert_service.rs  logger_impl.rs  mod.rs  monitoring_service.rs  network_service_impl.rs  permission_service.rs  storage_service_impl.rs  system_info_impl.rs
crates/connectias-core/tests/: integration_tests.rs  message_broker_ipc_tests.rs
crates/connectias-ipc/: Cargo.toml
crates/connectias-ipc/src/: error.rs  lib.rs  named_pipe.rs  transport.rs  unix_socket.rs
crates/connectias-ipc/tests/: ipc_tests.rs
crates/connectias-security/: .coderabbit.yaml  Cargo.toml  build.rs
crates/connectias-security/benches/: security_benchmarks.rs  security_performance.rs
crates/connectias-security/src/: lib.rs  memory_protection.rs  network.rs  rasp.rs  sandbox.rs  signature.rs  threat_detection.rs  validator.rs  zero_trust.rs
crates/connectias-security/src/platform/linux/: mod.rs  rasp.rs
crates/connectias-security/src/platform/windows/: rasp.rs
crates/connectias-security/tests/: rasp_tests.rs  sandbox_tests.rs  security_tests.rs  signature_tests.rs  validator_tests.rs
crates/connectias-storage/: Cargo.toml
crates/connectias-storage/src/: encryption.rs  lib.rs  models.rs  schema.sql
crates/connectias-storage/tests/: encryption_tests.rs  storage_tests.rs
crates/connectias-wasm/: Cargo.toml
crates/connectias-wasm/benches/: wasm_performance.rs
crates/connectias-wasm/src/: fuel_meter.rs  lib.rs
crates/connectias-wasm/tests/: wasm_runtime_tests.rs
design/: 01_main_dashboard.html  02_battery_analyzer.html  03_security_dashboard.html  04_network_scanner.html  05_authentication.html  06_usb_manager.html  07_privacy_dashboard.html  08_settings.html  09_vulnerability_scanner.html  ICON_SPECS.md  icon_preview.html
docs/: ADEPTUS_MECHANICUS_THEME.md  ANDROID_16KB_PAGE_SIZE.md  API_DOCUMENTATION.md  API_RATE_LIMITING.md  APP_ANALYSIS_REPORT.md  ARCHITECTURE_PLAN.md  BUGFIX_PLUGIN_IMPORT_LOOP.md  COMPOSE_MIGRATION.md  FULLSCREEN_PLUGIN_UI.md  LOGGING_SERVICE_SECURITY.md  MATERIAL3_EXPRESSIVE_IMPLEMENTATION.md  MODERN_UI_DESIGN_M3.md  MVP_PLAN.md  NAVIGATION_CHANGES.md  PHASE_1-4_CHECKLIST.md  (+31 more)
feature-dnstools/src/main/rust/: Cargo.toml  build.rs
feature-dnstools/src/main/rust/.cargo/: config.toml
feature-dnstools/src/main/rust/src/: lib.rs
feature-dvd/src/main/cpp/: CMakeLists.txt  dvd_jni.cpp  dvd_wrapper.h  vlc_jni.cpp
feature-dvd/src/main/cpp/include/vlc/: vlc_stub.h
feature-network/src/main/rust/: Cargo.toml  README.md  build.rs
feature-network/src/main/rust/.cargo/: config.toml
feature-network/src/main/rust/src/: lib.rs
feature-ntp/src/main/rust/: Cargo.toml
feature-ntp/src/main/rust/.cargo/: config.toml
feature-ntp/src/main/rust/src/: lib.rs
feature-password/src/main/rust/: Cargo.toml
feature-password/src/main/rust/.cargo/: config.toml
feature-password/src/main/rust/src/: lib.rs
feature-secure-notes/src/main/rust/: Cargo.toml
feature-secure-notes/src/main/rust/.cargo/: config.toml
feature-secure-notes/src/main/rust/src/: lib.rs
feature-usb/src/main/cpp/: CMakeLists.txt  dvd_jni.cpp  dvd_wrapper.h  libusb_wrapper.h  usb_jni.cpp  usb_wrapper.h
rust/: Cargo.toml  README.md  build.rs  connectias_ffi.h
rust/.cargo/: config.toml
rust/c/: dvd_helper.c
rust/src/: api.rs  block_device.rs  bridge_generated.rs  error.rs  jni_bridge.rs  lib.rs  memory.rs  ntfs_reader.rs  ntfs_volume.rs  partition.rs  plugin_ops.rs  scsi.rs  security.rs  state.rs
rust/src/database/: connection.rs  mod.rs  schema.rs
rust/src/dvd/: block_read.rs  ffi.rs  mod.rs  stream.rs
rust/src/logging/: levels.rs  logger.rs  mod.rs
rust/src/validation/: log_validator.rs  mod.rs
rust/tests/: ffi_integration_tests.rs  message_broker_integration_tests.rs  plugin_examples_integration_tests.rs  plugin_registry_integration_tests.rs  service_integration_tests.rs  wasm_runtime_integration_tests.rs
tools/plugin-signer/: Cargo.toml  README.md
tools/plugin-signer/src/: main.rs
(+1537 files in other folders)
