[package]
name = "connectias_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
connectias-core = { path = "../crates/connectias-core" }
connectias-security = { path = "../crates/connectias-security" }
connectias-api = { path = "../crates/connectias-api" }
connectias-storage = { path = "../crates/connectias-storage" }
tokio = { version = "1", features = ["rt", "sync", "macros"] }
once_cell = "1"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
# Rust FFI Dependencies
