[package]
name = "connectias_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
