[package]
name = "connectias-wasm"
version = "0.1.0"
edition = "2021"

[features]
default = ["advanced_fuel_metering"]
advanced_fuel_metering = []

[dependencies]
wasmtime = "24.0.4"
tokio = { workspace = true }
connectias-api = { path = "../connectias-api" }
thiserror = { workspace = true }
anyhow = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "wasm_performance"
harness = false
