[package]
name = "plugin-signer"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "plugin-signer"
path = "src/main.rs"

[dependencies]
ring = "0.17"
zip = "0.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
base64 = "0.22"
hex = "0.4"

