[package]
name = "connectias_root_detector"
version = "0.1.0"
edition = "2021"

[lib]
name = "connectias_root_detector"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
walkdir = "2.4"
ring = "0.17"
zeroize = "1.7"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
log = "0.4"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization

