[package]
name = "connectias_ntp"
version = "0.1.0"
edition = "2021"

[lib]
name = "connectias_ntp"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
byteorder = "1.5"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
log = "0.4"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization

